#1765: Tool menu icons broken on mac/fx3.6 Use correct icons + trunk cont.

--- a/chrome/skin/mac/integration.css
+++ b/chrome/skin/mac/integration.css
@@ -3,7 +3,7 @@
 /* Mac uses the window menu bar, and there is no support for sprites */
 #dtaToolsMenu,
 #dtaToolsDTA {
-	list-style-image: url(chrome://dta/skin/common/dta.png);
+	list-style-image: url(chrome://dta/skin/toolbarbuttons/normal.png);
 	-moz-image-region: auto;
 }
 #dtaToolsTDTA {
